--- a/newfile.html
+++ b/newfile.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,11 +5,10 @@
 	<title>Hey World</title>
 </head>
 <body>
+<p>Hello World. glad to be back!!!!!!</p>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, laboriosam, possimus fugit hic obcaecati modi quis. Incidunt, repellat, voluptates quis porro blanditiis debitis exercitationem odio aut autem ea natus sed!
 </body>
 </html>
 
-hello world!
-=======
->>>>>>> 0e26b015528533c7755536c20bdee4ca9ef3de52
+
 
