--- a/newfile.html
+++ b/newfile.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <p>Hello World. glad to be back!!!!!!</p>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, laboriosam, possimus fugit hic obcaecati modi quis. Incidunt, repellat, voluptates quis porro blanditiis debitis exercitationem odio aut autem ea natus sed!
-	<h2>okay so git hub is actually really really NEAT</h2>
-<p>Listen up!</p>
+<h2>let's try this again okay?</h2>
 </body>
 </html>
 
