--- a/newfile.html
+++ b/newfile.html
@@ -2,16 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Glad to be back</title>
+	<title>Git Testing</title>
 </head>
 <body>
-<p>Hello World. glad to be back!!!!!!</p>
-<h2>let's try this again okay?</h2>
-<li class="ul li">
-	<li class="ul">
-		<p>confusing eh?</p>
-	</li>
-</li>
+<p>Github is actually really fun.</p>
 </body>
 </html>
 
